Fixed scrollbar nonsense!

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,30 @@
+/* -------------------------------
+
+    Minimal scrollbars
+
+------------------------------- */
+::-webkit-scrollbar
+{
+  width: 12px;
+  height: 12px;
+}
+
+::-webkit-scrollbar-track
+{
+  background: rgba(0, 0, 0, 0.1);
+}
+
+::-webkit-scrollbar-thumb
+{
+  background: rgba(0, 0, 0, 0.5);
+}
+
+/* -------------------------------
+
+    Body styles
+
+------------------------------- */
+
 body {
     background-color: #000;
     color: #fff;
@@ -310,6 +337,7 @@ section.menu .tabs .item:hover::after {
     border-radius: 20px;
     color: #333;
     overflow-x: hidden !important;
+    overflow-y: hidden !important;
 }
 
 .featherlight-content #item .content {
